<resources>
    <string name="app_name">MobileStudent</string>

    <!-- Strings related to login -->
    <string name="hint_login">Логин</string>
    <string name="hint_email">Почта</string>
    <string name="hint_password">Пароль</string>
    <string name="hint_retry_password">Повтрить пароль</string>
    <string name="action_login">Войти</string>
    <string name="action_sign_in">Зарегистрироваться</string>
    <string name="sign_in_trigger"><u>Зарегистрироваться</u></string>
    <string name="login_trigger"><u>Войти</u></string>
    <string name="authorization">Авторизация</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="subscriptions">Подписки</string>
    <string name="profile">Профиль</string>
    <string name="menu">Меню</string>

    <!-- Profile screen -->
    <string name="user_name">Имя пользователя:</string>
    <string name="user_direction">Направление:</string>
    <string name="logout">Выйти</string>

    <string name="edit">Редактировать</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="courses">Курсы</string>
    <string name="course">Курс</string>
    <string name="materials">Дополнительные материалы</string>
    <string name="lectures">Лекции</string>
    <string name="all_courses">Все названия</string>
    <string name="all_names">Все имена</string>

    <!-- Edit profile screen -->
    <string name="editing">Редактирование</string>
    <string name="hint_new_login">Новый логин</string>
    <string name="hint_new_email">Новая почта</string>
    <string name="hint_new_password">Новый пароль</string>
    <string name="hint_new_retry_password">Повтрить новый пароль</string>

    <!-- Error -->
    <string name="warning">Внимание</string>
    <string name="sign_in_error">Ошибка регистрации</string>
    <string name="login_error">Ошибка авторизации</string>
    <string name="error_invalid_email">Неверный адрес электронной почты</string>
    <string name="error_invalid_password">Этот пароль слишком короткий</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="error_incorrect_password">Неверный пароль</string>
    <string name="passwords_do_not_match">Пароли не совпадают</string>
    <string name="empty_passwords">Поле пароля не должно быть пустым</string>
    <string name="error_field_required">Это поле является обязательным</string>
    <string name="error_load_subscriptions">Не удалось загрузить подписки</string>
    <string name="error_load_course">Не удалось загрузить информацию о курсе</string>

    <string name="subscribe">Подписаться</string>
    <string name="unsubscribe">Отписаться</string>

    <string name="search_by_subscriptions">Поиск по подпискам</string>
</resources>
