<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <ProgressBar
        android:id="@+id/profile_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/subscribe_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:background="@drawable/bg_logout_button"
                android:text="@string/subscribe"
                android:textColor="@color/colorAccent"
                android:textStyle="bold" />

            <Button
                android:id="@+id/unsubscribe_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_default"
                android:background="@drawable/bg_cancel_button"
                android:text="@string/unsubscribe"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/materials_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/materials"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/materials_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default" />

            <TextView
                android:id="@+id/lectures_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default"
                android:text="@string/lectures"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="@dimen/text_size_title"
                android:textStyle="bold" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/lectures_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_default" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>